--- a/css/user.css
+++ b/css/user.css
@@ -1,3 +1,47 @@
+.user_info{
+    height: auto;
+    width: 90%;
+    margin: auto;
+    background-color: #f2f2f2;
+    border-style: solid;
+    border-bottom-style: none;
+    border-radius: 10px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-width: 2px;
+    border-color: #808080;
+    padding: 15px;
+}
+.illneses{
+    height: auto;
+    width: 90%;
+    margin: auto;
+    background-color: #808080;
+    border-style: solid;
+    border-top-style: none;
+    border-radius: 0px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-width: 2px;
+    border-color: #808080;
+    padding: 15px;
+    color: white;
+}
+.allergies{
+    padding: 5px;
+    margin: 0;
+    height: auto; 
+    float: left;
+    width: 48%; 
+}
+.diseases{
+    padding: 5px;
+    margin: 0;
+    height: auto;
+    float: right;
+    width: 48%; 
+}
+
 .disease{
 height: auto;
 width: 100%;
@@ -22,7 +66,7 @@ textarea.disease:hover{
     border-color: silver;
     opacity: 1;
 }
-button.add_disease{
+button{
 background-color: #4CAF50;  
 color: white;
 cursor: pointer;
