--- a/css/user.css
+++ b/css/user.css
@@ -1,3 +1,61 @@
+br {
+    display: block;
+    margin: 10px 0;
+}
+
+#Change_user_info{
+    display:none;
+}
+select{
+    height: 30px;
+    width: 30%;
+    margin: 5px;
+    border-color: silver;
+    opacity: 1;
+    border-radius: 4px;
+    border-width: 2px;
+    font-size: 17px;
+    white-space: normal;
+    overflow-wrap: break-word;
+    text-decoration: none;
+    resize: none;
+    transition: 0.8s;
+    text-align: center;   
+}
+select:hover{
+    border-color: silver;
+    opacity: 1;
+}
+textarea.user.o{
+  opacity: 1;
+  width: 90%;
+  padding: 0px;
+  min-height: 60px;;
+}
+textarea.user.b{
+    font-size: 15px;
+}
+textarea.user{
+    min-height: 30px;
+    width: 70%;
+    margin: 5px;
+    padding: 5px;
+    border-color: silver;
+    opacity: 0.70;
+    border-radius: 4px;
+    border-width: 2px;
+    font-size: 17px;
+    white-space: normal;
+    overflow-wrap: break-word;
+    text-decoration: none;
+    resize: none;
+    transition: 0.8s;
+    text-align: center;
+}
+textarea.user:hover{
+    border-color: silver;
+    opacity: 1;
+}
 .user_info{
     height: auto;
     width: 90%;
@@ -12,6 +70,7 @@
     border-color: #808080;
     padding: 15px;
     font-size: 20px;
+    line-height: 1.6;
 }
 .illneses{
     height: auto;
@@ -34,14 +93,14 @@
     margin: 0;
     height: auto; 
     float: left;
-    width: 48%; 
+    width: 45%; 
 }
 .diseases{
     padding: 5px;
     margin: 0;
     height: auto;
     float: right;
-    width: 48%; 
+    width: 45%; 
 }
 
 .disease{
