--- a/css/user.css
+++ b/css/user.css
@@ -7,7 +7,7 @@ h2{
 }
 .bmi{
 min-height: 70px;
-width: 420px;
+max-width: 420px;
 color: white; 
 background-color: gray;
 margin: auto;
@@ -33,7 +33,7 @@ padding: 10px;
 
 .bmi_des{
     height: auto;
-    width: 95%;
+    width: 90%;
     color: white; 
     background-color: gray;
     margin: auto;
@@ -69,6 +69,8 @@ select:hover{
     border-color: silver;
     opacity: 1;
 }
+
+
 textarea.user.o{
   opacity: 1;
   width: 90%;
@@ -99,6 +101,15 @@ textarea.user:hover{
     border-color: silver;
     opacity: 1;
 }
+textarea.feel_text{
+    max-width: 500px;
+    width: 90%;
+}
+input.feel_text{
+    max-width: 300px;
+}
+
+
 .user_info{
     height: auto;
     width: 90%;
@@ -220,3 +231,61 @@ opacity: 1;
     border-bottom: 2px solid #333;
     transform: translateY(20px);;
 }
+
+.custom-select {
+    position: relative;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+  }
+  
+  .custom-select select {
+    display: none; /*hide original SELECT element:*/
+  }
+  
+  .select-selected {
+    background-color:  #81c082;
+  }
+  
+  .select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+  }
+  
+  .select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+  }
+  
+  .select-items div,.select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .select-items {
+    position: absolute;
+    background-color:  #81c082;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  
+  .select-hide {
+    display: none;
+  }
+  
+  .select-items div:hover, .same-as-selected {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
